Update cli code