@@ -1,6 +1,7 @@
 package com.insights.client.source_control_insights_cli.lib;
 
 import java.util.List;
+import java.util.Arrays;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
@@ -19,5 +20,7 @@ public class Commits {
         return processOutput.getCommand(List.of("git", "remote", "get-url", "origin"));
     }
 
-    public String getUserLocalRepoRoot() { return processOutput.getCommand(List.of("git", "rev-parse", "--show-toplevel")); }
+    public String getRepoName() {
+        return Arrays.asList(processOutput.getCommand(List.of("git", "rev-parse", "--show-toplevel")).split("[/\\\\]")).getLast();
+    }
 }
